--- a/github/workflows/fig-tokens-pull.yaml
+++ b/github/workflows/fig-tokens-pull.yaml
@@ -4,7 +4,7 @@ on: pull_request
 
 jobs:
   run_if: # only if base branch is "figma-tokens"
-    if: ${{ github.head_ref == 'fig-tokens' }}
+    if: ${{ github.head_ref == 'figma-tokens' }}
     name: Process Figma Tokens
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -19,7 +19,7 @@ jobs:
         run: npm install
 
       - name: Run token-transformer
-        run: npx token-transformer sd-input/src/fig-tokens-output.json sd-input/src/sd-input.json --resolveReferences false
+        run: npx token-transformer sd-input/src/figma-tokens-output.json sd-input/src/sd-input.json --resolveReferences false
 
       - name: Run style-dictionary
         run: npx style-dictionary build --config sd.config.cjs
